--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ environment = {"CMAKE_ARGS"="-DCMAKE_OSX_DEPLOYMENT_TARGET=10.15 -DCMAKE_C_COMPI
 # - build only the required boost dependencies (building all boost is slow)
 ##
 [tool.cibuildwheel.windows]
-environment = {"CMAKE_GENERATOR"="Visual Studio 17 2022"}
+environment = {"CMAKE_GENERATOR"="Visual Studio 17 2022", "CMAKE_ARGS"="-DCMAKE_POLICY_VERSION_MINIMUM=3.5"}
 before-build = [
 "if not exist \"vcpkg\" git clone --branch 2025.03.19 https://github.com/microsoft/vcpkg.git",
 "cd vcpkg",
