--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,10 @@ environment = {"CMAKE_ARGS"="-DCMAKE_OSX_DEPLOYMENT_TARGET=10.15 -DCMAKE_C_COMPI
 # - build only the required boost dependencies (building all boost is slow)
 ##
 [tool.cibuildwheel.windows]
-environment = {"CMAKE_GENERATOR"="Visual Studio 17 2022", "CMAKE_ARGS"="-DCMAKE_POLICY_VERSION_MINIMUM=3.5", "CMAKE_POLICY_VERSION_MINIMUM"="3.5"}
+environment = {"CMAKE_GENERATOR"="Visual Studio 17 2022"}
 before-build = [
+"export CMAKE_ARGS=\"-DCMAKE_POLICY_VERSION_MINIMUM=3.5\"",
+"export VCPKG_ENV_PASSTHROUGH=1",
 "if not exist \"vcpkg\" git clone --branch 2025.03.19 https://github.com/microsoft/vcpkg.git",
 "cd vcpkg",
 "findstr /c:\"set(VCPKG_BUILD_TYPE release)\" triplets\\x64-windows-static.cmake || echo set(VCPKG_BUILD_TYPE release) >> triplets\\x64-windows-static.cmake",
