--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,10 +58,8 @@ environment = {"CMAKE_ARGS"="-DCMAKE_OSX_DEPLOYMENT_TARGET=10.15 -DCMAKE_C_COMPI
 [tool.cibuildwheel.windows]
 environment = {"CMAKE_GENERATOR"="Visual Studio 17 2022"}
 before-build = [
-"set CMAKE_ARGS=\"-DCMAKE_POLICY_VERSION_MINIMUM=3.5\"",
-"set VCPKG_ENV_PASSTHROUGH=1",
 "if not exist \"vcpkg\" git clone https://github.com/microsoft/vcpkg.git",
-"cd vcpkg; git checkout 0bde25d4ffc4349ac70a8c22615203eb1201aa4a; cd ..",
+"cd vcpkg; git checkout 0bde25d4ffc4349ac70a8c22615203eb1201aa4a",
 "findstr /c:\"set(VCPKG_BUILD_TYPE release)\" triplets\\x64-windows-static.cmake || echo set(VCPKG_BUILD_TYPE release) >> triplets\\x64-windows-static.cmake",
 "bootstrap-vcpkg.bat -disableMetrics",
 "vcpkg update",
